kubernetes/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    run: web
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  type: NodePort
